[gd_scene load_steps=10 format=1]

[ext_resource path="res://Scripts/GReverser.gd" type="Script" id=1]
[ext_resource path="res://Textures/Sprites/LIKOVI/reverser.png" type="Texture" id=2]
[ext_resource path="res://Scripts/GReverserArea.gd" type="Script" id=3]
[ext_resource path="res://Textures/Sprites/LIKOVI/reverser_magla.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 100, 40 )

[sub_resource type="Animation" id=2]

resource/name = "idle"
length = 4.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AreaReverser/SpriteArea:visibility/opacity")
tracks/0/interp = 2
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 2, 4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.3, 0.5, 0.3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:transform/pos")
tracks/1/interp = 2
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1, 2.2, 3.1 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1.09778, -1.03783 ), Vector2( 1.62886, -1 ), Vector2( -0.338211, 1.65513 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visibility/opacity")
tracks/2/interp = 2
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 2, 4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.75, 1.0, 0.75 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:transform/rot")
tracks/3/interp = 2
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 1.2, 2.4, 3.4 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.6, -0.6, 0.25 ]
}

[sub_resource type="Animation" id=3]

resource/name = "none"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaReverser/SpriteArea:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 0.3 ]
}

[sub_resource type="Animation" id=4]

resource/name = "faca"
length = 1.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CapsuleShape2D" id=5]

custom_solver_bias = 0.0
radius = 50.0
height = 220.0

[node name="GReverser" type="KinematicBody2D" groups=[
"Platforms",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 256
collision/mask = 256
collision/margin = 0.08
script/script = ExtResource( 1 )
platform_speed = 50
direction = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 2 )
anims/none = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="faca_anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/faca = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="."]

visibility/opacity = 0.75
texture = ExtResource( 2 )
hframes = 2

[node name="AreaReverser" type="Area2D" parent="."]

transform/pos = Vector2( 70, 0 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( -4.37114e-08, 1, -1, -4.37114e-08, 55, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 2
script/script = ExtResource( 3 )

[node name="SpriteArea" type="Sprite" parent="AreaReverser"]

visibility/opacity = 0.3
transform/pos = Vector2( 53.6619, 0 )
texture = ExtResource( 4 )

[node name="ColReverser" type="CollisionShape2D" parent="AreaReverser"]

visibility/visible = false
transform/pos = Vector2( 55, 0 )
transform/rot = -90.0
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[connection signal="body_exit" from="AreaReverser" to="." method="_on_AreaReverser_body_exit"]


